--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npm run serve",
+    "serve": "vue-cli-service serve",
+    "lint": "vue-cli-service lint",
+    "build": "vue-cli-service build --target lib --name lol --dest dist/lol src/lol/pack.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +20,41 @@
   "bugs": {
     "url": "https://github.com/mscststs/lol-tft/issues"
   },
-  "homepage": "https://github.com/mscststs/lol-tft#readme"
+  "homepage": "https://github.com/mscststs/lol-tft#readme",
+  "dependencies": {
+    "vue": "^2.6.14"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-plugin-unit-jest": "^3.3.0",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
+    "@vue/cli-service": "^3.12.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "eslint": "^7.15.0",
+    "eslint-plugin-vue": "^7.2.0",
+    "css-loader": "^3.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "style-loader": "^1.0.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.41.2",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
+    "webpack-merge": "^4.2.2",
+    "webpack-stream": "^5.2.1"
+
+  }
 }
