--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "vue-router": "^3.6.5"
   },
   "devDependencies": {
-    "node-ipc": "^9.2.1",
     "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
     "@vue/cli-plugin-babel": "^3.3.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-vue": "^7.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "node-ipc": "^9.2.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.1",
